__tree_add_current(SRCS)
set(LIBS Qt5::Core)
set(DEFS QTUSER_CORE_DLL)

__add_real_target(qtuser_core dll SOURCE ${SRCS} LIB ${LIBS} DEF ${DEFS})
set_property(TARGET qtuser_core PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})

if(INSTALL_QTUSER)
	INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/qtusercore DESTINATION include/ FILES_MATCHING PATTERN "*.h")
endif()